# backend/swagger-output.json
@@ -211,134 +211,6 @@
           }
         }
       }
-    },
-    "/api/tours": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      }
-    },
-    "/api/tour/": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "adminBuchtitel": {
-                  "example": "any"
-                },
-                "adminAutor": {
-                  "example": "any"
-                },
-                "adminGenre": {
-                  "example": "any"
-                },
-                "adminKlappentext": {
-                  "example": "any"
-                },
-                "adminArtNr": {
-                  "example": "any"
-                },
-                "adminLagerbestand": {
-                  "example": "any"
-                },
-                "adminPreis": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      }
-    },
-    "/api/book/{id}": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "adminBuchtitel": {
-                  "example": "any"
-                },
-                "adminAutor": {
-                  "example": "any"
-                },
-                "adminGenre": {
-                  "example": "any"
-                },
-                "adminKlappentext": {
-                  "example": "any"
-                },
-                "adminArtNr": {
-                  "example": "any"
-                },
-                "adminLagerbestand": {
-                  "example": "any"
-                },
-                "adminPreis": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      }
     }
   }
 }
